kube-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
        - name: fast-api
          image: ciaa/fast-forecast:${VERSION}
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1000m"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: json-configmap-volume
              mountPath: /etc/config
      volumes:
        - name: json-configmap-volume
          configMap:
            name: mlflow-s3-credentials  
---
apiVersion: v1
kind: Service
metadata:
  name: fast-api-service
spec:
  selector:
    app: fast-api
  ports:
  - port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/app"
        backend:
          service:
            name: fast-api-service
            port:
              number: 8000
